# build-a-llm-from-scratch-book

./: .gitignore  pyproject.toml
notebooks/: setup_environ.md
